# MultivariateNormativeModeling

./: .bandit  .coveragerc  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.cache/pre-commit/: db.db
.github/workflows/: ci.yml  ci_pipeline.yml
config/: config_001.yml  config_artificial_rds.yml  config_default.yml  config_example_experiment.yml  config_example_smri.yml  config_genr.yml  config_genr075.yml  config_genr_079.yml  config_genr_080+.yml  config_genr_ba.yml  config_genr_baseline.yml  config_genr_exp.yml  config_genr_minmax.yml  config_genr_trial1.yml  config_genr_trial2.yml  config_genr_v5.yml  config_genr_zscore.yml  config_hbn.yml  config_hbn_2.yml  config_hbn_ba.yml  config_hbn_baseline.yml  config_mnist.yml
config/backup/: config_genr_baseline.yml  config_hbn_baseline.yml  config_hbn_latent.yml  config_hbn_site_effect.yml
config/experiments/: config_genr_baseline.yml  config_hbn_baseline.yml
config/unused_archive/: config_genr075.yml  config_genr_079.yml  config_genr_080+.yml  config_genr_exp.yml  config_genr_latest.yml  config_genr_minmax.yml  config_genr_trial1.yml  config_genr_trial2.yml  config_genr_v5.yml  config_genr_zscore.yml
config/validate/: config_artificial_rds.yml  config_mnist.yml
data/: generated_data.rds
data/processed/: freesurfer_dummy_output.csv  normalization_stats.json  test_generated_data.csv
docker/: Dockerfile  docker-compose.yml
models/checkpoints/: vae_design_v1_11.pt
output/: model_arch_vae_basic_v1
scripts/: generate_dummy_data.py
scripts/analysis/: aggresults.py  aggresults_site.py  extract_metrics.py  gentablebaseline.py  gentablecov.py
scripts/data/: freesurfer_rds_generation.R  generate_dummy_data.py
scripts/data/combining/: site_sampler.py  split_site.py
scripts/data/genr/: core_data_explore.py  instructions.txt  merge_data.py  merged_data_explore.py  mri_data_explore.py
scripts/data/genr/analyse/: explore_rds.py
scripts/data/genr/qc/: ENIGMA_outliers.R
scripts/data/genr/sex/: create_sex_rds.py
scripts/data/harmonization/combat/: apply_combat.py
scripts/data/hbn/: instructions.txt  merge_core_site.py  merge_data.py  process_hbn.sh  process_hbn_core.sh
scripts/data/hbn/qc/: ENIGMA_outliers.R
scripts/data/hbn/sites/: CBIC.txt  CUNY.txt  RUBIC.txt  SI.txt  create_hbn_site_table.py
scripts/data/qc/: ENIGMA_outliers.R
scripts/docker/: run_docker.sh
scripts/harmonization/combat/: apply_combat.py
scripts/slurm/: run_genr_exploration.sh  run_training.sh  run_training_gpu.sh  run_tuning_gpu.sh  run_validation.sh  run_validation_gpu.sh  sync_snellius.sh
scripts/univariate/genr/pcn_blr/: pcn_blr.py
scripts/univariate/genr/pcn_hbr/: pcn_hbr.py
scripts/univariate/hbn/pcn_blr/: pcn_blr.py
src/: main.py
src/analysis/: abstract_data_analysis.py  factory.py
src/analysis/deviation/: latent_deviation_scores.py
src/analysis/engine/: abstract_analysis_engine.py  factory.py
src/analysis/evaluation/: covariates.py
src/analysis/exploration/: abstract_data_exploration.py  exploration_phase.py
src/analysis/explorer/: abstract_data_explorer.py
src/analysis/impl/: tabular_data_analysis.py
src/analysis/metrics/: invarient_metrics.py  latent_metrics.py  mbd.py  mse.py  nmrse.py  normative_metrics.py  reconstruction_metrics.py
src/analysis/outlier/: outlier_detection.py
src/analysis/summary/: input_summary.py  latent_space_summary.py
src/analysis/utils/: image.py  normalization_reader.py
src/analysis/visualization/: feature_plots.py  image.py  latent_plots.py
src/config/: config_manager.py  config_schema.py
src/data/: abstract_dataloader.py  abstract_dataset.py  factory.py
src/data/convertion/: abstract_dataconverter.py  r_to_csv_converter.py
src/data/impl/: factory.py
src/data/preprocessing/: abstract_preprocessor.py  pipeline.py
src/entities/: experiment_manager.py  log_manager.py  properties.py
src/model/: model_functions.py
src/model/components/: abstract_component.py  base_decoder.py  decoder.py  encoder.py  factory.py
src/model/loss/: bce_kl_loss.py  factory.py  functions.py
src/model/loss_functions/: bce_kl_loss.py
src/model/models/: abstract_model.py  factory.py  vae_modular.py  vae_simple.py
src/model/optimizers/: factory.py
src/model/regularizers/: factory.py  functions.py
src/model/schedulers/: factory.py
src/optimization/loss/: factory.py
src/optimization/loss_functions/: factory.py
src/optimization/optimizers/: factory.py
src/optimization/regularizers/: early_stopping.py  factory.py
src/optimization/schedulers/: factory.py
src/preprocessing/: abstract_dataset.py  dataloader.py  dataset.py  pipeline.py
src/preprocessing/converter/: abstract_data_converter.py  abstract_dataconverter.py  r_to_csv_converter.py
src/preprocessing/freesurfer_data/: freesurfer_dataloader.py  freesurfer_dataset.py
src/preprocessing/impl/: data_cleaning.py  normalization.py
src/preprocessing/pipeline/: abstract_pipeline.py  factory.py
src/preprocessing/preprocessor/: abstract_preprocessor.py  factory.py
src/preprocessing/transform/: factory.py
src/tasks/: abstract_result.py  abstract_task.py  task_result.py
src/tasks/experiment/: experiment_task.py
src/tasks/inference/: inference_task.py
src/tasks/training/: train_task.py  trainer.py  training_result.py
src/tasks/tuning/: tuning_task.py
src/tasks/validation/: validate_task.py  validation_result.py  validator.py
src/training/: __main__.py  train.py  trainer.py
src/util/: cmd_utils.py  config_utils.py  data_utils.py  errors.py  file_utils.py  log_utils.py  math_utils.py  model_utils.py  numpy_utils.py  system_utils.py  tensor_utils.py
tests/analysis/evaluation/: test_covariates.py  test_stratified_metric.py
tests/analysis/metrics/: test_evs.py  test_mae.py  test_mbd.py  test_mehalanobis.py  test_mse.py  test_nrmse.py  test_pearson_r.py  test_r2.py  test_rmse.py
tests/config/: config_default.yml  test_config_manager.py
tests/util/: test_model_utils.py
(+117 files in other folders)
