[tool.poetry]
name = "MNM-Kit"
version = "1.0.0"
description = "Multivariate Normative Modeling Kit"
authors = ["remdui <remyduijsens@gmail.com>"]
license = "MIT"
repository = "https://github.com/remdui/MultivariateNormativeModeling"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "2.7.1" # deep learning library
pandas = "2.2.3" # data manipulation library
numpy = "2.0.2" # numerical computing library
scipy = "1.14.1" # scientific computing library
scikit-learn = "1.6.0" # machine learning library
PyYAML = "6.0.2" # YAML parser
types-PyYAML = "6.0.12.20250516" # type hints for PyYAML
pandas-stubs = "2.2.3.241126" # type hints for pandas
tqdm = "4.67.1" # progress bar
types-tqdm = "4.67.0.20241119" # type hints for tqdm
pydantic = "2.10.3" # data validation
pyreadr = "0.5.2" # read R data files
types-psutil = "6.1.0.20241102" # type hints for psutil
psutil = "6.1.0" # process and system utilities
torchview = "0.2.6" # model visualization library
graphviz = "0.20.3" # graph visualization library
matplotlib = "3.10.0" # plotting library
pillow = "11.0.0" # image processing library
torchvision ="0.22.1" # computer vision library
tables = "3.10.1" # HDF5 file format library
datasets = "3.2.0" # dataset library from huggingface
safetensors = "0.4.5" # safe tensor operations
seaborn = "0.13.2" # data visualization library
statsmodels = "0.14.4" # statistical models library
umap-learn = "0.5.7" # dimensionality reduction library
hdbscan = "0.8.40" # clustering library
plotly = "5.24.1" # interactive plotting library
tensorboard = "2.18.0" # inspection tool for deep learning
openTSNE = "1.0.2" # fast t-SNE implementation
SAlib = "1.5.1" # sensitivity analysis library
scikit-image = "0.25.0" # image processing library
optuna = "4.1.0" # hyperparameter optimization library
hyppo = "^0.5.1" # hyppo
future = "1.0.0" # Comptability between python2/3
pcntoolkit ="0.33" # PCN Toolkit Framework
neuroHarmonize = "2.4.5" # Combat data harmonization wrapper
neuroCombat = "0.2.12" # Combat data harmonization
poetry-core = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pylint = "3.3.1" # linting
mypy = "1.13.0" # static type checking
pydocstringformatter = "0.7.3" # format docstrings
black = "24.10.0" # code formatting
isort = "5.13.2" # import sorting
ruff = "0.12.5" # linting
autoflake = "2.3.1" # remove unused imports
pyupgrade = "3.20.0" # upgrade syntax to newer versions
pre-commit = "4.0.1" # pre-commit hooks
bandit = "1.7.10" # security linter
radon = "6.0.1" # code metrics (human)
xenon = "0.9.3" # code metrics (machine)

[tool.poetry.group.test.dependencies]
pytest = "8.4.1" # unit testing
pytest-cov = "6.0.0" # wrapper for coverage
pytest-mock = "3.14.0" # mock library for pytest
hypothesis = "6.136.3" # property based testing

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
